[package]
name = "rustic"
version = "0.1.0"
authors = ["Pema Malling <pemamalling@gmail.com>"]
edition = "2021"

[dependencies]
shared_structs = { path = "shared_structs" }
kernels = { path = "kernels" }
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24.2", default-features = false, features = ["bytemuck", "libm"] }
gpgpu = { git = "https://github.com/pema99/gpgpu-rs", rev = "226579e", features = ["image", "integrate-image"] }
rand = "0.8.5"
oidn = { version = "1.4.3", optional = true }
lazy_static = "1.4.0"
russimp = { version = "3.2.0", features = ["prebuilt"] }
image = { version = "0.24.6", default-features = false, features = ["png", "jpeg", "hdr", "tga", "exr", "openexr"] }
parking_lot = "0.12.1"
winit = "0.29.10"
wgpu = { version = "0.19.1", features = ["spirv"] }
egui-wgpu = "0.26.2"
egui_winit_platform = "0.21.0"
egui = "0.26.2"
egui_plot = "0.26.2"
pollster = "0.2.5"
tinyfiledialogs = "3.9.1"
fast_image_resize = "2.7.3"
rayon = "1.7.0"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "1a9c8b8" }

[features]
oidn = ["dep:oidn"]

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3

[profile.dev]
opt-level = 1
incremental = true

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false